--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:2.5.2"
+
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 }
